--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
     <footer>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
-      <i class="fal fa-utensils">Proposer un restaurant</i>
-      <i class="fal fa-hands-helping">Devenir partenaire</i>
+      <i class="fas fa-utensils">Proposer un restaurant</i>
+      <i class="fas fa-hands-helping">Devenir partenaire</i>
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
