--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -91,8 +91,8 @@
     </section>
     <footer>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
-      <i class="fal fa-utensils">Proposer un restaurant</i>
-      <i class="fal fa-hands-helping">Devenir partenaire</i>
+      <i class="fas fa-utensils">Proposer un restaurant</i>
+      <i class="fas fa-hands-helping">Devenir partenaire</i>
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
