--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     </div>
     <section class="menu_fonctionnement">
       <h2>Fonctionnement</h2>
-      <div class="menu_1">
+      <div class="menu">
         <p>1</p>
         <i class="fas fa-mobile-alt">Choisissez un restaurant</i>
       </div>
-      <div class="menu_2">
+      <div class="menu">
         <p>2</p>
         <i class="fas fa-list-ul">Composez votre menu</i>
       </div>
-      <div class="menu_3">
+      <div class="menu">
         <p>3</p>
         <i class="fas fa-store">Dégustez au restaurant</i>
       </div>
