Mise en page header et description page d'accueil, création nouveau dossier pour stocker les fichiers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Oh my food</title>
-    <link rel="stylesheet" type="text/css" href="style.scss" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -17,7 +17,6 @@
       <img
         src="images/ohmyfood.png"
         alt="Logo Oh my food"
-        class="header_logo"
       />
     </header>
     <div class="localisation">
