--- a/index.html
+++ b/index.html
@@ -30,17 +30,26 @@
     </div>
     <section class="menu_fonctionnement">
       <h2>Fonctionnement</h2>
-      <div class="menu">
+      <div class="menu_etape">
         <p>1</p>
-        <i class="fas fa-mobile-alt">Choisissez un restaurant</i>
+        <div class="menu">
+        <i class="fas fa-mobile-alt fa-lg"></i>
+        <h3>Choisissez un restaurant</h3>
+        </div>
       </div>
-      <div class="menu">
+      <div class="menu_etape">
         <p>2</p>
-        <i class="fas fa-list-ul">Composez votre menu</i>
+        <div class="menu">
+        <i class="fas fa-list-ul fa-lg"></i>
+        <h3>Composez votre menu</h3>
+        </div>
       </div>
-      <div class="menu">
+      <div class="menu_etape">
         <p>3</p>
-        <i class="fas fa-store">Dégustez au restaurant</i>
+        <div class="menu_3">
+        <i class="fas fa-store fa-lg"></i>
+        <h3>Dégustez au restaurant</h3>
+        </div>
       </div>
     </section>
     <section class="restaurants_menu">
