--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>A la française</title>
-    <link rel="stylesheet" type="text/css" href="style.scss" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -13,82 +13,93 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><i class="fal fa-arrow-left"></i></a>
+      <a href="index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
     </header>
-    <img src="images/alafrancaise.jpg" alt="A la française" />
-
-    <section class="menu">
-      <h1>A la française</h1>
-      <i class="far fa-heart"></i>
-
-      <div class="menu_entrees">
-        <h2>ENTREES</h2>
-
-        <div class="entree_1">
-          <h3>Tartare de poulpe acidulé</h3>
-          <p>Aux zest d'orange</p>
-          <p>25€</p>
+    <div class="photo_restaurant">
+      <img src="images/alafrancaise.jpg" alt="A la française" />
+    </div>
+    <div class="background">
+      <section class="menu_complet">
+        <div class="titre_menu_coeur">
+          <h1>A la française</h1>
+          <i class="far fa-heart fa-lg"></i>
         </div>
 
-        <div class="entree_2">
-          <h3>Velouté de légumes d'antan</h3>
-          <p>Carotte, panais, topinambour</p>
-          <p>35€</p>
+        <div class="menu_entrees">
+          <h2>ENTREES</h2>
+
+          <div class="entree">
+            <h3>Tartare de poulpe acidulé</h3>
+            <div class="description_prix">
+              <p>Aux zest d'orange</p>
+              <p class="prix_gras">25€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Velouté de légumes d'antan</h3>
+            <div class="description_prix">
+              <p>Carotte, panais, topinambour</p>
+              <p class="prix_gras">35€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Soupe à l'oignon</h3>
+            <div class="description_prix">
+              <p>Revisitée</p>
+              <p class="prix_gras">20€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="entree_3">
-          <h3>Soupe à l'oignon</h3>
-          <p>Revisitée</p>
-          <p>20€</p>
-        </div>
-      </div>
+        <div class="menu_plats">
+          <h2>PLATS</h2>
 
-      <div class="menu_plats">
-        <h2>PLATS</h2>
+          <div class="plat_1">
+            <h3>Coquilles Saint-Jacques</h3>
+            <p>Accompagnées d'une purée de panais</p>
+            <p>40€</p>
+          </div>
 
-        <div class="plat_1">
-          <h3>Coquilles Saint-Jacques</h3>
-          <p>Accompagnées d'une purée de panais</p>
-          <p>40€</p>
-        </div>
+          <div class="plat_2">
+            <h3>Magret de canard</h3>
+            <p>Et parmentier de pommes de terres</p>
+            <p>35€</p>
+          </div>
 
-        <div class="plat_2">
-          <h3>Magret de canard</h3>
-          <p>Et parmentier de pommes de terres</p>
-          <p>35€</p>
-        </div>
-
-        <div class="plat_3">
-          <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-          <p>Sur son lit de gnocchis aux légumes</p>
-          <p>44€</p>
-        </div>
-      </div>
-
-      <div class="menu_desserts">
-        <h2>DESSERTS</h2>
-
-        <div class="dessert_1">
-          <h3>Pétales de violettes glacés</h3>
-          <p>Et purée de noisettes</p>
-          <p>18€</p>
+          <div class="plat_3">
+            <h3>Pigeonneau d'Illes-et-Vilaine</h3>
+            <p>Sur son lit de gnocchis aux légumes</p>
+            <p>44€</p>
+          </div>
         </div>
 
-        <div class="dessert_2">
-          <h3>Fondant au chocolat</h3>
-          <p>Revisité</p>
-          <p>22€</p>
-        </div>
+        <div class="menu_desserts">
+          <h2>DESSERTS</h2>
 
-        <div class="dessert_3">
-          <h3>Millefeuille croustillant</h3>
-          <p>Myrtilles et pâte d'amande</p>
-          <p>23€</p>
+          <div class="dessert_1">
+            <h3>Pétales de violettes glacés</h3>
+            <p>Et purée de noisettes</p>
+            <p>18€</p>
+          </div>
+
+          <div class="dessert_2">
+            <h3>Fondant au chocolat</h3>
+            <p>Revisité</p>
+            <p>22€</p>
+          </div>
+
+          <div class="dessert_3">
+            <h3>Millefeuille croustillant</h3>
+            <p>Myrtilles et pâte d'amande</p>
+            <p>23€</p>
+          </div>
         </div>
-      </div>
-      <button>Commander</button>
-    </section>
+        <button>Commander</button>
+      </section>
+    </div>
     <footer>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
       <i class="fas fa-utensils">Proposer un restaurant</i>
