--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -57,53 +57,73 @@
         <div class="menu_plats">
           <h2>PLATS</h2>
 
-          <div class="plat_1">
+          <div class="plat">
             <h3>Coquilles Saint-Jacques</h3>
-            <p>Accompagnées d'une purée de panais</p>
-            <p>40€</p>
+            <div class="description_prix">
+              <p>Accompagnées d'une purée de panais</p>
+              <p class="prix_gras">40€</p>
+            </div>
           </div>
 
-          <div class="plat_2">
+          <div class="plat">
             <h3>Magret de canard</h3>
-            <p>Et parmentier de pommes de terres</p>
-            <p>35€</p>
+            <div class="description_prix">
+              <p>Et parmentier de pommes de terres</p>
+              <p class="prix_gras">35€</p>
+            </div>
           </div>
 
-          <div class="plat_3">
+          <div class="plat">
             <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-            <p>Sur son lit de gnocchis aux légumes</p>
-            <p>44€</p>
+            <div class="description_prix">
+              <p>Sur son lit de gnocchis aux légumes</p>
+              <p class="prix_gras">44€</p>
+            </div>
           </div>
         </div>
 
         <div class="menu_desserts">
           <h2>DESSERTS</h2>
 
-          <div class="dessert_1">
+          <div class="dessert">
             <h3>Pétales de violettes glacés</h3>
-            <p>Et purée de noisettes</p>
-            <p>18€</p>
+            <div class="description_prix">
+              <p>Et purée de noisettes</p>
+              <p class="prix_gras">18€</p>
+            </div>
           </div>
 
-          <div class="dessert_2">
+          <div class="dessert">
             <h3>Fondant au chocolat</h3>
-            <p>Revisité</p>
-            <p>22€</p>
+            <div class="description_prix">
+              <p>Revisité</p>
+              <p class="prix_gras">22€</p>
+            </div>
           </div>
 
-          <div class="dessert_3">
+          <div class="dessert">
             <h3>Millefeuille croustillant</h3>
-            <p>Myrtilles et pâte d'amande</p>
-            <p>23€</p>
+            <div class="description_prix">
+              <p>Myrtilles et pâte d'amande</p>
+              <p class="prix_gras">23€</p>
+            </div>
           </div>
         </div>
-        <button>Commander</button>
+
+        <button class="btn_restaurants_page">Commander</button>
       </section>
     </div>
+
     <footer>
-      <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
-      <i class="fas fa-utensils">Proposer un restaurant</i>
-      <i class="fas fa-hands-helping">Devenir partenaire</i>
+      <h4>ohmyfood</h4>
+      <div class="footer_logo_1">
+        <i class="fas fa-utensils fa-xs"></i>
+        <p>Proposer un restaurant</p>
+      </div>
+      <div class="footer_logo_2">
+        <i class="fas fa-hands-helping fa-xs"></i>
+        <p>Devenir partenaire</p>
+      </div>
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
