--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <section class="restaurants_menu">
       <h2>Restaurants</h2>
 
+      <a href="lapalettedugout.html">
       <div class="restaurants_carte">
         <img
           src="images/lapalettedugout.jpg"
@@ -65,7 +66,9 @@
       </div>
         <p>Ménilmontant</p>
       </div>
+    </a>
 
+      <a href="lanoteenchantee.html">
       <div class="restaurants_carte">
         <img
           src="images/lanoteenchanté.jpg"
@@ -77,7 +80,9 @@
         </div>
         <p>Charonne</p>
       </div>
+      </a>
 
+      <a href="alafrancaise.html">
       <div class="restaurants_carte">
         <img src="images/alafrancaise.jpg" alt="A la française restaurant" />
         <div class="titre_coeur">
@@ -86,7 +91,9 @@
         </div>
         <p>Cité Rouge</p>
       </div>
+    </a>
 
+      <a href="ledelicedessens.html">
       <div class="restaurants_carte">
         <img
           src="images/ledelicedessens.jpg"
@@ -98,6 +105,7 @@
         </div>
         <p>Folie-Méricourt</p>
       </div>
+    </a>
     </section>
 
     <footer>
