--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>La palette du goût</title>
-    <link rel="stylesheet" type="text/css" href="style.scss" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -13,86 +13,117 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><i class="fal fa-arrow-left"></i></a>
+      <a href="index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
     </header>
-    <img src="images/lapalettedugout.jpg" alt="La palette du goût" />
-
-    <section class="menu">
-      <h1>La palette du goût</h1>
-      <i class="far fa-heart"></i>
-
-      <div class="menu_entrees">
-        <h2>ENTREES</h2>
-
-        <div class="entree_1">
-          <h3>Fricassée d'escargot</h3>
-          <p>Au piment d'espelette</p>
-          <p>25€</p>
+    <div class="photo_restaurant">
+      <img src="images/lapalettedugout.jpg" alt="La palette du goût" />
+    </div>
+    <div class="background">
+      <section class="menu_complet">
+        <div class="titre_menu_coeur">
+          <h1>La palette du goût</h1>
+          <i class="far fa-heart fa-lg"></i>
         </div>
 
-        <div class="entree_2">
-          <h3>Foie gras de canard mi-cuit</h3>
-          <p>Et ses copeaux de truffe noire</p>
-          <p>35€</p>
+        <div class="menu_entrees">
+          <h2>ENTREES</h2>
+
+          <div class="entree">
+            <h3>Fricassée d'escargot</h3>
+            <div class="description_prix">
+              <p>Au piment d'espelette</p>
+              <p class="prix_gras">25€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Foie gras de canard mi-cuit</h3>
+            <div class="description_prix">
+              <p>Et ses copeaux de truffe noire</p>
+              <p class="prix_gras">35€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Oeuf au plat</h3>
+            <div class="description_prix">
+              <p>Assaisonné à la truffe sur lit de...</p>
+              <p class="prix_gras">20€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="entree_3">
-          <h3>Oeuf au plat</h3>
-          <p>Assaisonné à la truffe sur lit de...</p>
-          <p>20€</p>
-        </div>
-      </div>
+        <div class="menu_plats">
+          <h2>PLATS</h2>
 
-      <div class="menu_plats">
-        <h2>PLATS</h2>
+          <div class="plat">
+            <h3>Filet de boeuf aux herbes</h3>
+            <div class="description_prix">
+              <p>Accompagné de sa ribambelle de légu...</p>
+              <p class="prix_gras">40€</p>
+            </div>
+          </div>
 
-        <div class="plat_1">
-          <h3>Filet de boeuf aux herbes</h3>
-          <p>Accompagné de sa ribambelle de légu...</p>
-          <p>40€</p>
-        </div>
+          <div class="plat">
+            <h3>Parmentier de queue de boeuf</h3>
+            <div class="description_prix">
+              <p>A la truffe noire sur sa purée de panais</p>
+              <p class="prix_gras">35€</p>
+            </div>
+          </div>
 
-        <div class="plat_2">
-          <h3>Parmentier de queue de boeuf</h3>
-          <p>A la truffe noire sur sa purée de panais</p>
-          <p>35€</p>
-        </div>
-
-        <div class="plat_3">
-          <h3>Filet de Turbot</h3>
-          <p>Aux agrumes</p>
-          <p>44€</p>
-        </div>
-      </div>
-
-      <div class="menu_desserts">
-        <h2>DESSERTS</h2>
-
-        <div class="dessert_1">
-          <h3>Paris-Brest</h3>
-          <p>Revisité</p>
-          <p>18€</p>
+          <div class="plat">
+            <h3>Filet de Turbot</h3>
+            <div class="description_prix">
+              <p>Aux agrumes</p>
+              <p class="prix_gras">44€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="dessert_2">
-          <h3>Macaron au chocolat d'exception</h3>
-          <p>Et glace à la vanille de Madagascar</p>
-          <p>22€</p>
+        <div class="menu_desserts">
+          <h2>DESSERTS</h2>
+
+          <div class="dessert">
+            <h3>Paris-Brest</h3>
+            <div class="description_prix">
+              <p>Revisité</p>
+              <p class="prix_gras">18€</p>
+            </div>
+          </div>
+
+          <div class="dessert">
+            <h3>Macaron au chocolat d'exception</h3>
+            <div class="description_prix">
+              <p>Et glace à la vanille de Madagascar</p>
+              <p class="prix_gras">22€</p>
+            </div>
+          </div>
+
+          <div class="dessert">
+            <h3>Mousse au chocolat</h3>
+            <div class="description_prix">
+              <p>Au piment d'espelette et à la truffe noire</p>
+              <p class="prix_gras">23€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="dessert_3">
-          <h3>Mousse au chocolat</h3>
-          <p>Au piment d'espelettes et à la truffe noire</p>
-          <p>23€</p>
-        </div>
-      </div>
-      <button>Commander</button>
-    </section>
+        <button class="btn_restaurants_page">Commander</button>
+      </section>
+    </div>
+
     <footer>
-      <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
-      <i class="fas fa-utensils">Proposer un restaurant</i>
-      <i class="fas fa-hands-helping">Devenir partenaire</i>
+      <h4>ohmyfood</h4>
+      <div class="footer_logo_1">
+        <i class="fas fa-utensils fa-xs"></i>
+        <p>Proposer un restaurant</p>
+      </div>
+      <div class="footer_logo_2">
+        <i class="fas fa-hands-helping fa-xs"></i>
+        <p>Devenir partenaire</p>
+      </div>
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
