--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Le délice des sens</title>
-    <link rel="stylesheet" type="text/css" href="style.scss" />
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
@@ -13,86 +13,117 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><i class="fal fa-arrow-left"></i></a>
+      <a href="index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
     </header>
-    <img src="images/ledelicedessens.jpg" alt="LLe délice des sens" />
-
-    <section class="menu">
-      <h1>Le délice des sens/h1>
-        <i class="far fa-heart"></i>
-
-      <div class="menu_entrees">
-        <h2>ENTREES</h2>
-
-        <div class="entree_1">
-          <h3>Tartare de thon</h3>
-          <p>Assaisonné au yuzu</p>
-          <p>25€</p>
+    <div class="photo_restaurant">
+      <img src="images/ledelicedessens.jpg" alt="Le délice des sens" />
+    </div>
+    <div class="background">
+      <section class="menu_complet">
+        <div class="titre_menu_coeur">
+          <h1>Le délice des sens</h1>
+          <i class="far fa-heart fa-lg"></i>
         </div>
 
-        <div class="entree_2">
-          <h3>Bouchée de homard croustillant</h3>
-          <p>Et sa farandole de petits légumes</p>
-          <p>35€</p>
+        <div class="menu_entrees">
+          <h2>ENTREES</h2>
+
+          <div class="entree">
+            <h3>Tartare de thon</h3>
+            <div class="description_prix">
+              <p>Assaisonné au yuzu</p>
+              <p class="prix_gras">25€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Bouchée de homard croustillant</h3>
+            <div class="description_prix">
+              <p>Et sa farandole de petits légumes</p>
+              <p class="prix_gras">35€</p>
+            </div>
+          </div>
+
+          <div class="entree">
+            <h3>Velouté de cèpes</h3>
+            <div class="description_prix">
+              <p>Aux truffes</p>
+              <p class="prix_gras">20€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="entree_3">
-          <h3>Velouté de cèpes</h3>
-          <p>Aux truffes</p>
-          <p>20€</p>
-        </div>
-      </div>
+        <div class="menu_plats">
+          <h2>PLATS</h2>
 
-      <div class="menu_plats">
-        <h2>PLATS</h2>
+          <div class="plat">
+            <h3>Poulet rôti aux herbes de provence</h3>
+            <div class="description_prix">
+              <p>Et sa crème de truffe</p>
+              <p class="prix_gras">40€</p>
+            </div>
+          </div>
 
-        <div class="plat_1">
-          <h3>Poulet rôti aux herbes de provence</h3>
-          <p>Et sa crème de truffe</p>
-          <p>40€</p>
-        </div>
+          <div class="plat">
+            <h3>Langouste rôtie</h3>
+            <div class="description_prix">
+              <p>Et ses légumes de saison</p>
+              <p class="prix_gras">35€</p>
+            </div>
+          </div>
 
-        <div class="plat_2">
-          <h3>Langouste rôtie</h3>
-          <p>Et ses légumes de saison</p>
-          <p>35€</p>
-        </div>
-
-        <div class="plat_3">
-          <h3>Côte de boeuf angus</h3>
-          <p>Et sa purée de panais</p>
-          <p>44€</p>
-        </div>
-      </div>
-
-      <div class="menu_desserts">
-        <h2>DESSERTS</h2>
-
-        <div class="dessert_1">
-          <h3>Farandole de desserts</h3>
-          <p>Du chef</p>
-          <p>18€</p>
+          <div class="plat">
+            <h3>Côte de boeuf angus</h3>
+            <div class="description_prix">
+              <p>Et sa purée de panais</p>
+              <p class="prix_gras">44€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="dessert_2">
-          <h3>Crème brulée</h3>
-          <p>Revisitée</p>
-          <p>22€</p>
+        <div class="menu_desserts">
+          <h2>DESSERTS</h2>
+
+          <div class="dessert">
+            <h3>Farandole de desserts</h3>
+            <div class="description_prix">
+              <p>Du chef</p>
+              <p class="prix_gras">18€</p>
+            </div>
+          </div>
+
+          <div class="dessert">
+            <h3>Crème brulée</h3>
+            <div class="description_prix">
+              <p>Revisitée</p>
+              <p class="prix_gras">22€</p>
+            </div>
+          </div>
+
+          <div class="dessert">
+            <h3>Tiramisu</h3>
+            <div class="description_prix">
+              <p>A la noisette</p>
+              <p class="prix_gras">23€</p>
+            </div>
+          </div>
         </div>
 
-        <div class="dessert_3">
-          <h3>Tiramisu</h3>
-          <p>A la noisette</p>
-          <p>23€</p>
-        </div>
-      </div>
-      <button>Commander</button>
-    </section>
+        <button class="btn_restaurants_page">Commander</button>
+      </section>
+    </div>
+
     <footer>
-      <img src="images/ohmyfood.png" alt="Logo Ohmyfood" />
-      <i class="fas fa-utensils">Proposer un restaurant</i>
-      <i class="fas fa-hands-helping">Devenir partenaire</i>
+      <h4>ohmyfood</h4>
+      <div class="footer_logo_1">
+        <i class="fas fa-utensils fa-xs"></i>
+        <p>Proposer un restaurant</p>
+      </div>
+      <div class="footer_logo_2">
+        <i class="fas fa-hands-helping fa-xs"></i>
+        <p>Devenir partenaire</p>
+      </div>
       <p>Mentions légales</p>
       <p>Contact</p>
     </footer>
