--- a/index.html
+++ b/index.html
@@ -14,110 +14,128 @@
 
   <body>
     <header>
-      <img
-        src="images/ohmyfood.png"
-        alt="Logo Oh my food"
-      />
+      <img src="images/ohmyfood.png" alt="Logo Oh my food" />
     </header>
     <div class="localisation">
       <i class="fas fa-map-marker-alt"></i>
       <p>Paris, Belleville</p>
     </div>
-    <div class="description_ohmyfood">
-      <h1>Réserver le menu qui vous convient</h1>
-      <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-      <button class="btn_description">Explorer nos restaurants</button>
+    <div class="responsive">
+      <div class="description_ohmyfood">
+        <h1>Réserver le menu qui vous convient</h1>
+        <p>
+          Découvrez des restaurants d'exception, séléctionnés par nos soins.
+        </p>
+        <button class="btn_description">Explorer nos restaurants</button>
+      </div>
+      <section class="menu_fonctionnement">
+        <h2>Fonctionnement</h2>
+        <div class="menu_etape" data-order="1">
+          <div class="menu">
+            <i class="fas fa-mobile-alt fa-lg"></i>
+            <h3>Choisissez un restaurant</h3>
+          </div>
+        </div>
+        <div class="menu_etape" data-order="2">
+          <div class="menu">
+            <i class="fas fa-list-ul fa-lg"></i>
+            <h3>Composez votre menu</h3>
+          </div>
+        </div>
+        <div class="menu_etape" data-order="3">
+          <div class="menu_3">
+            <i class="fas fa-store fa-lg"></i>
+            <h3>Dégustez au restaurant</h3>
+          </div>
+        </div>
+      </section>
     </div>
-    <section class="menu_fonctionnement">
-      <h2>Fonctionnement</h2>
-      <div class="menu_etape" data-order="1">
-        <div class="menu">
-        <i class="fas fa-mobile-alt fa-lg"></i>
-        <h3>Choisissez un restaurant</h3>
-        </div>
-      </div>
-      <div class="menu_etape" data-order="2">
- 
-        <div class="menu">
-        <i class="fas fa-list-ul fa-lg"></i>
-        <h3>Composez votre menu</h3>
-        </div>
-      </div>
-      <div class="menu_etape" data-order="3">
-
-        <div class="menu_3">
-        <i class="fas fa-store fa-lg"></i>
-        <h3>Dégustez au restaurant</h3>
-        </div>
-      </div>
-    </section>
     <section class="restaurants_menu">
       <h2>Restaurants</h2>
 
-      <a href="lapalettedugout.html">
-      <div class="restaurants_carte">
-        <img
-          src="images/lapalettedugout.jpg"
-          alt="La palette du goût restaurant"
-        />
-        <div class="titre_coeur">
-        <h3>La palette du goût</h3>
-        <i class="far fa-heart fa-lg"></i>
-      </div>
-        <p>Ménilmontant</p>
-      </div>
-    </a>
+<div class="responsive_ordi">
+      <div class="restaurant_rangé1">
+        <a href="lapalettedugout.html">
+          <div class="restaurants_carte">
+            <img
+              src="images/lapalettedugout.jpg"
+              alt="La palette du goût restaurant"
+            />
+            <div class="titre_coeur">
+              <h3>La palette du goût</h3>
+              <i class="far fa-heart fa-lg"></i>
+            </div>
+            <p>Ménilmontant</p>
+          </div>
+        </a>
 
-      <a href="lanoteenchantee.html">
-      <div class="restaurants_carte">
-        <img
-          src="images/lanoteenchanté.jpg"
-          alt="La note enchantée restaurant"
-        />
-        <div class="titre_coeur">
-        <h3>La note enchantée</h3>
-        <i class="far fa-heart fa-lg"></i>
-        </div>
-        <p>Charonne</p>
+        <a href="lanoteenchantee.html">
+          <div class="restaurants_carte">
+            <img
+              src="images/lanoteenchanté.jpg"
+              alt="La note enchantée restaurant"
+            />
+            <div class="titre_coeur">
+              <h3>La note enchantée</h3>
+              <i class="far fa-heart fa-lg"></i>
+            </div>
+            <p>Charonne</p>
+          </div>
+        </a>
       </div>
-      </a>
 
-      <a href="alafrancaise.html">
-      <div class="restaurants_carte">
-        <img src="images/alafrancaise.jpg" alt="A la française restaurant" />
-        <div class="titre_coeur">
-        <h3>A la française</h3>
-        <i class="far fa-heart fa-lg"></i>
+      <div class="restaurant_rangé2">
+        <div class="alafrancaise_carte">
+          <a href="alafrancaise.html">
+            <div class="restaurants_carte">
+              <img
+                src="images/alafrancaise.jpg"
+                alt="A la française restaurant"
+              />
+              <div class="titre_coeur">
+                <h3>A la française</h3>
+                <i class="far fa-heart fa-lg"></i>
+              </div>
+              <p>Cité Rouge</p>
+            </div>
+          </a>
         </div>
-        <p>Cité Rouge</p>
-      </div>
-    </a>
 
-      <a href="ledelicedessens.html">
-      <div class="restaurants_carte">
-        <img
-          src="images/ledelicedessens.jpg"
-          alt="Le délice des sens restaurant"
-        />
-        <div class="titre_coeur">
-        <h3>Le délice des sens</h3>
-        <i class="far fa-heart fa-lg"></i>
+        <div class="ledelicedessens_carte">
+          <a href="ledelicedessens.html">
+            <div class="restaurants_carte">
+              <img
+                src="images/ledelicedessens.jpg"
+                alt="Le délice des sens restaurant"
+              />
+              <div class="titre_coeur">
+                <h3>Le délice des sens</h3>
+                <i class="far fa-heart fa-lg"></i>
+              </div>
+              <p>Folie-Méricourt</p>
+            </div>
+          </a>
         </div>
-        <p>Folie-Méricourt</p>
       </div>
-    </a>
+      </div>
     </section>
 
     <footer>
       <h4>ohmyfood</h4>
+     
       <div class="footer_logo_1">
-      <i class="fas fa-utensils fa-xs"></i><p>Proposer un restaurant</p>
+        <i class="fas fa-utensils fa-xs"></i>
+        <p>Proposer un restaurant</p>
       </div>
       <div class="footer_logo_2">
-      <i class="fas fa-hands-helping fa-xs"></i><p>Devenir partenaire</p>
-      </div>
+        <i class="fas fa-hands-helping fa-xs"></i>
+        <p>Devenir partenaire</p>
+        </div>
+     
+  <div class="footer_partie2">
       <p>Mentions légales</p>
       <p>Contact</p>
+      </div>
     </footer>
   </body>
 </html>
