"modification pour responsive"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2>Restaurants</h2>
 
 <div class="responsive_ordi">
-      <div class="restaurant_rangé1">
+      <div class="restaurant_range1">
         <a href="lapalettedugout.html">
           <div class="restaurants_carte">
             <img
@@ -85,7 +85,7 @@
         </a>
       </div>
 
-      <div class="restaurant_rangé2">
+      <div class="restaurant_range2">
         <div class="alafrancaise_carte">
           <a href="alafrancaise.html">
             <div class="restaurants_carte">
