--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="menu_etape" data-order="3">
-          <div class="menu_3">
+          <div class="menu">
             <i class="fas fa-store fa-lg"></i>
             <h3>Dégustez au restaurant</h3>
           </div>
@@ -65,6 +65,7 @@
             <div class="titre_coeur">
               <h3>La palette du goût</h3>
               <i class="far fa-heart fa-lg"></i>
+             
             </div>
             <p>Ménilmontant</p>
           </div>
