--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>A la française</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -31,27 +31,37 @@
           <h2>ENTREES</h2>
 
           <div class="entree">
-            <h3>Tartare de poulpe acidulé</h3>
-            <div class="description_prix">
-              <p>Aux zest d'orange</p>
-              <p class="prix_gras">25€</p>
+            <div class="entree_contenu">
+              <h3>Tartare de poulpe acidulé</h3>
+              <div class="description_prix">
+                <p class="description">Aux zest d'orange</p>
+                <p class="prix_gras">25€</p>
+              </div>
             </div>
+
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Velouté de légumes d'antan</h3>
-            <div class="description_prix">
-              <p>Carotte, panais, topinambour</p>
-              <p class="prix_gras">35€</p>
+            <div class="entree_contenu">
+              <h3>Velouté de légumes d'antan</h3>
+              <div class="description_prix">
+                <p class="description">Carotte, panais, topinambour</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Soupe à l'oignon</h3>
-            <div class="description_prix">
-              <p>Revisitée</p>
-              <p class="prix_gras">20€</p>
+            <div class="entree_contenu">
+              <h3>Soupe à l'oignon</h3>
+              <div class="description_prix">
+                <p class="description">Revisitée</p>
+                <p class="prix_gras">20€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -59,27 +69,36 @@
           <h2>PLATS</h2>
 
           <div class="plat">
-            <h3>Coquilles Saint-Jacques</h3>
-            <div class="description_prix">
-              <p>Accompagnées d'une purée de panais</p>
-              <p class="prix_gras">40€</p>
+            <div class="plat_contenu">
+              <h3>Coquilles Saint-Jacques</h3>
+              <div class="description_prix">
+                <p class="description">Accompagnées d'une purée de panais</p>
+                <p class="prix_gras">40€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Magret de canard</h3>
-            <div class="description_prix">
-              <p>Et parmentier de pommes de terres</p>
-              <p class="prix_gras">35€</p>
+            <div class="plat_contenu">
+              <h3>Magret de canard</h3>
+              <div class="description_prix">
+                <p class="description">Et parmentier de pommes de terres</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Pigeonneau d'Illes-et-Vilaine</h3>
-            <div class="description_prix">
-              <p>Sur son lit de gnocchis aux légumes</p>
-              <p class="prix_gras">44€</p>
+            <div class="plat_contenu">
+              <h3>Pigeonneau d'Illes-et-Vilaine</h3>
+              <div class="description_prix">
+                <p class="description">Sur son lit de gnocchis aux légumes</p>
+                <p class="prix_gras">44€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -87,27 +106,36 @@
           <h2>DESSERTS</h2>
 
           <div class="dessert">
-            <h3>Pétales de violettes glacés</h3>
-            <div class="description_prix">
-              <p>Et purée de noisettes</p>
-              <p class="prix_gras">18€</p>
+            <div class="plat_contenu">
+              <h3>Pétales de violettes glacés</h3>
+              <div class="description_prix">
+                <p class="description">Et purée de noisettes</p>
+                <p class="prix_gras">18€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Fondant au chocolat</h3>
-            <div class="description_prix">
-              <p>Revisité</p>
-              <p class="prix_gras">22€</p>
+            <div class="dessert_contenu">
+              <h3>Fondant au chocolat</h3>
+              <div class="description_prix">
+                <p class="description">Revisité</p>
+                <p class="prix_gras">22€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Millefeuille croustillant</h3>
-            <div class="description_prix">
-              <p>Myrtilles et pâte d'amande</p>
-              <p class="prix_gras">23€</p>
+            <div class="dessert_contenu">
+              <h3>Millefeuille croustillant</h3>
+              <div class="description_prix">
+                <p class="description">Myrtilles et pâte d'amande</p>
+                <p class="prix_gras">23€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
