--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Le délice des sens</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -31,27 +31,36 @@
           <h2>ENTREES</h2>
 
           <div class="entree">
-            <h3>Tartare de thon</h3>
-            <div class="description_prix">
-              <p>Assaisonné au yuzu</p>
-              <p class="prix_gras">25€</p>
+            <div class="entree_contenu">
+              <h3>Tartare de thon</h3>
+              <div class="description_prix">
+                <p class="description">Assaisonné au yuzu</p>
+                <p class="prix_gras">25€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Bouchée de homard croustillant</h3>
-            <div class="description_prix">
-              <p>Et sa farandole de petits légumes</p>
-              <p class="prix_gras">35€</p>
+            <div class="entree_contenu">
+              <h3>Bouchée de homard croustillant</h3>
+              <div class="description_prix">
+                <p class="description">Et sa farandole de petits légumes</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Velouté de cèpes</h3>
-            <div class="description_prix">
-              <p>Aux truffes</p>
-              <p class="prix_gras">20€</p>
+            <div class="entree_contenu">
+              <h3>Velouté de cèpes</h3>
+              <div class="description_prix">
+                <p class="description">Aux truffes</p>
+                <p class="prix_gras">20€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -59,27 +68,36 @@
           <h2>PLATS</h2>
 
           <div class="plat">
-            <h3>Poulet rôti aux herbes de provence</h3>
-            <div class="description_prix">
-              <p>Et sa crème de truffe</p>
-              <p class="prix_gras">40€</p>
+            <div class="plat_contenu">
+              <h3>Poulet rôti aux herbes de provence</h3>
+              <div class="description_prix">
+                <p class="description">Et sa crème de truffe</p>
+                <p class="prix_gras">40€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Langouste rôtie</h3>
-            <div class="description_prix">
-              <p>Et ses légumes de saison</p>
-              <p class="prix_gras">35€</p>
+            <div class="plat_contenu">
+              <h3>Langouste rôtie</h3>
+              <div class="description_prix">
+                <p class="description">Et ses légumes de saison</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Côte de boeuf angus</h3>
-            <div class="description_prix">
-              <p>Et sa purée de panais</p>
-              <p class="prix_gras">44€</p>
+            <div class="plat_contenu">
+              <h3>Côte de boeuf angus</h3>
+              <div class="description_prix">
+                <p class="description">Et sa purée de panais</p>
+                <p class="prix_gras">44€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -87,27 +105,36 @@
           <h2>DESSERTS</h2>
 
           <div class="dessert">
-            <h3>Farandole de desserts</h3>
-            <div class="description_prix">
-              <p>Du chef</p>
-              <p class="prix_gras">18€</p>
+            <div class="plat_contenu">
+              <h3>Farandole de desserts</h3>
+              <div class="description_prix">
+                <p class="description">Du chef</p>
+                <p class="prix_gras">18€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Crème brulée</h3>
-            <div class="description_prix">
-              <p>Revisitée</p>
-              <p class="prix_gras">22€</p>
+            <div class="plat_contenu">
+              <h3>Crème brulée</h3>
+              <div class="description_prix">
+                <p class="description">Revisitée</p>
+                <p class="prix_gras">22€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Tiramisu</h3>
-            <div class="description_prix">
-              <p>A la noisette</p>
-              <p class="prix_gras">23€</p>
+            <div class="plat_contenu">
+              <h3>Tiramisu</h3>
+              <div class="description_prix">
+                <p class="description">A la noisette</p>
+                <p class="prix_gras">23€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
