--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>La note enchantée</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -31,35 +31,47 @@
           <h2>ENTREES</h2>
 
           <div class="entree">
-            <h3>Ravioles de foie gras</h3>
-            <div class="description_prix">
-              <p>Accompagnés de leur crème à la truffe</p>
-              <p class="prix_gras">25€</p>
+            <div class="entree_contenu">
+              <h3>Ravioles de foie gras</h3>
+              <div class="description_prix">
+                <p class="description">Accompagnés de leur crème à la truffe</p>
+                <p class="prix_gras">25€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Caviar osciètre</h3>
-            <div class="description_prix">
-              <p>Sur blini à la farine de blé noir</p>
-              <p class="prix_gras">35€</p>
+            <div class="entree_contenu">
+              <h3>Caviar osciètre</h3>
+              <div class="description_prix">
+                <p class="description">Sur blini à la farine de blé noir</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Homard et espuma de...</h3>
-            <div class="description_prix">
-              <p>Mariné aux zests d'orange</p>
-              <p class="prix_gras">20€</p>
+            <div class="entree_contenu">
+              <h3>Homard et espuma de potiron</h3>
+              <div class="description_prix">
+                <p class="description">Mariné aux zests d'orange</p>
+                <p class="prix_gras">20€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Foie gras de canard cuit entier</h3>
-            <div class="description_prix">
-              <p>Confiture de figue et pain toasté</p>
-              <p class="prix_gras">20€</p>
+            <div class="entree_contenu">
+              <h3>Foie gras de canard cuit entier</h3>
+              <div class="description_prix">
+                <p class="description">Confiture de figue et pain toasté</p>
+                <p class="prix_gras">20€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -67,27 +79,36 @@
           <h2>PLATS</h2>
 
           <div class="plat">
-            <h3>Noix de coquilles Saint-Jacques</h3>
-            <div class="description_prix">
-              <p>Sur lit de purée de céleri-rave</p>
-              <p class="prix_gras">40€</p>
+            <div class="plat_contenu">
+              <h3>Noix de coquilles Saint-Jacques</h3>
+              <div class="description_prix">
+                <p class="description">Sur lit de purée de céleri-rave</p>
+                <p class="prix_gras">40€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Langoustine poêlée</h3>
-            <div class="description_prix">
-              <p>Purée de patate douce</p>
-              <p class="prix_gras">35€</p>
+            <div class="plat_contenu">
+              <h3>Langoustine poêlée</h3>
+              <div class="description_prix">
+                <p class="description">Purée de patate douce</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Mijoté de queue de boeuf</h3>
-            <div class="description_prix">
-              <p>Et riz sauvage aux zest de citron</p>
-              <p class="prix_gras">44€</p>
+            <div class="plat_contenu">
+              <h3>Mijoté de queue de boeuf</h3>
+              <div class="description_prix">
+                <p class="description">Et riz sauvage aux zest de citron</p>
+                <p class="prix_gras">44€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -95,27 +116,38 @@
           <h2>DESSERTS</h2>
 
           <div class="dessert">
-            <h3>Macaron noisette et chocolat</h3>
-            <div class="description_prix">
-              <p>Glace au caramel brun et sel de Guérande</p>
-              <p class="prix_gras">18€</p>
+            <div class="plat_contenu">
+              <h3>Macaron noisette et chocolat</h3>
+              <div class="description_prix">
+                <p class="description">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+                <p class="prix_gras">18€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Baba au rhum revisité</h3>
-            <div class="description_prix">
-              <p>Avec son coulis de citron</p>
-              <p class="prix_gras">22€</p>
+            <div class="plat_contenu">
+              <h3>Baba au rhum revisité</h3>
+              <div class="description_prix">
+                <p class="description">Avec son coulis de citron</p>
+                <p class="prix_gras">22€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Tarte au citron meringuée</h3>
-            <div class="description_prix">
-              <p>Destructurée</p>
-              <p class="prix_gras">23€</p>
+            <div class="plat_contenu">
+              <h3>Tarte au citron meringuée</h3>
+              <div class="description_prix">
+                <p class="description">Destructurée</p>
+                <p class="prix_gras">23€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
