--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>La palette du goût</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -31,27 +31,38 @@
           <h2>ENTREES</h2>
 
           <div class="entree">
-            <h3>Fricassée d'escargot</h3>
-            <div class="description_prix">
-              <p>Au piment d'espelette</p>
-              <p class="prix_gras">25€</p>
+            <div class="entree_contenu">
+              <h3>Fricassée d'escargot</h3>
+              <div class="description_prix">
+                <p class="description">Au piment d'espelette</p>
+                <p class="prix_gras">25€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Foie gras de canard mi-cuit</h3>
-            <div class="description_prix">
-              <p>Et ses copeaux de truffe noire</p>
-              <p class="prix_gras">35€</p>
+            <div class="entree_contenu">
+              <h3>Foie gras de canard mi-cuit</h3>
+              <div class="description_prix">
+                <p class="description">Et ses copeaux de truffe noire</p>
+                <p class="prix_gras">35€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="entree">
-            <h3>Oeuf au plat</h3>
-            <div class="description_prix">
-              <p>Assaisonné à la truffe sur lit de...</p>
-              <p class="prix_gras">20€</p>
+            <div class="entree_contenu">
+              <h3>Oeuf au plat</h3>
+              <div class="description_prix">
+                <p class="description">
+                  Assaisonné à la truffe sur lit de caviar
+                </p>
+                <p class="prix_gras">20€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -59,27 +70,39 @@
           <h2>PLATS</h2>
 
           <div class="plat">
-            <h3>Filet de boeuf aux herbes</h3>
-            <div class="description_prix">
-              <p>Accompagné de sa ribambelle de légu...</p>
-              <p class="prix_gras">40€</p>
+            <div class="plat_contenu">
+              <h3>Filet de boeuf aux herbes</h3>
+              <div class="description_prix">
+                <p class="description">
+                  Accompagné de sa ribambelle de légumes
+                </p>
+                <p class="prix_gras">40€</p>
+              </div>
             </div>
+            <div class="check"></div>
+          </div>
+          <div class="plat">
+            <div class="plat_contenu">
+              <h3>Parmentier de queue de boeuf</h3>
+              <div class="description_prix">
+                <p class="description">
+                  A la truffe noire sur sa purée de panais
+                </p>
+                <p class="prix_gras">35€</p>
+              </div>
+            </div>
+            <div class="check"></div>
           </div>
 
           <div class="plat">
-            <h3>Parmentier de queue de boeuf</h3>
-            <div class="description_prix">
-              <p>A la truffe noire sur sa purée de panais</p>
-              <p class="prix_gras">35€</p>
+            <div class="plat_contenu">
+              <h3>Filet de Turbot</h3>
+              <div class="description_prix">
+                <p class="description">Aux agrumes</p>
+                <p class="prix_gras">44€</p>
+              </div>
             </div>
-          </div>
-
-          <div class="plat">
-            <h3>Filet de Turbot</h3>
-            <div class="description_prix">
-              <p>Aux agrumes</p>
-              <p class="prix_gras">44€</p>
-            </div>
+            <div class="check"></div>
           </div>
         </div>
 
@@ -87,27 +110,38 @@
           <h2>DESSERTS</h2>
 
           <div class="dessert">
-            <h3>Paris-Brest</h3>
-            <div class="description_prix">
-              <p>Revisité</p>
-              <p class="prix_gras">18€</p>
+            <div class="plat_contenu">
+              <h3>Paris-Brest</h3>
+              <div class="description_prix">
+                <p class="description">Revisité</p>
+                <p class="prix_gras">18€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Macaron au chocolat d'exception</h3>
-            <div class="description_prix">
-              <p>Et glace à la vanille de Madagascar</p>
-              <p class="prix_gras">22€</p>
+            <div class="plat_contenu">
+              <h3>Macaron au chocolat d'exception</h3>
+              <div class="description_prix">
+                <p class="description">Et glace à la vanille de Madagascar</p>
+                <p class="prix_gras">22€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
 
           <div class="dessert">
-            <h3>Mousse au chocolat</h3>
-            <div class="description_prix">
-              <p>Au piment d'espelette et à la truffe noire</p>
-              <p class="prix_gras">23€</p>
+            <div class="plat_contenu">
+              <h3>Mousse au chocolat</h3>
+              <div class="description_prix">
+                <p class="description">
+                  Au piment d'espelette et à la truffe noire
+                </p>
+                <p class="prix_gras">23€</p>
+              </div>
             </div>
+            <div class="check"></div>
           </div>
         </div>
 
