Modification des derniers elements

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -21,7 +21,7 @@
       <img src="images/lapalettedugout.jpg" alt="La palette du goût" />
     </div>
     <div class="background">
-      <section class="menu_complet">
+      <main class="menu_complet">
         <div class="titre_menu_coeur">
           <h1>La palette du goût</h1>
           <i class="far fa-heart fa-lg"></i>
@@ -146,7 +146,7 @@
         </div>
 
         <button class="btn_restaurants_page">Commander</button>
-      </section>
+      </main>
     </div>
 
     <footer>
