--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -21,7 +21,7 @@
       <img src="images/alafrancaise.jpg" alt="A la française" />
     </div>
     <div class="background">
-      <section class="menu_complet">
+      <main class="menu_complet">
         <div class="titre_menu_coeur">
           <h1>A la française</h1>
           <i class="far fa-heart fa-lg"></i>
@@ -140,7 +140,7 @@
         </div>
 
         <button class="btn_restaurants_page">Commander</button>
-      </section>
+      </main>
     </div>
 
     <footer>
