--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
         <button class="btn_description">Explorer nos restaurants</button>
       </div>
-      <section class="menu_fonctionnement">
+      <main class="menu_fonctionnement">
         <h2>Fonctionnement</h2>
         <div class="menu_etape" data-order="1">
           <div class="menu">
@@ -55,7 +55,7 @@
             <h3>Dégustez au restaurant</h3>
           </div>
         </div>
-      </section>
+      </main>
     </div>
     <section class="restaurants_menu">
       <h2>Restaurants</h2>
