--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -21,7 +21,7 @@
       <img src="images/lanoteenchanté.jpg" alt="La note enchantée" />
     </div>
     <div class="background">
-      <section class="menu_complet">
+      <main class="menu_complet">
         <div class="titre_menu_coeur">
           <h1>La note enchantée</h1>
           <i class="far fa-heart fa-lg"></i>
@@ -152,7 +152,7 @@
         </div>
 
         <button class="btn_restaurants_page">Commander</button>
-      </section>
+      </main>
     </div>
 
     <footer>
