--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -21,7 +21,7 @@
       <img src="images/ledelicedessens.jpg" alt="Le délice des sens" />
     </div>
     <div class="background">
-      <section class="menu_complet">
+      <main class="menu_complet">
         <div class="titre_menu_coeur">
           <h1>Le délice des sens</h1>
           <i class="far fa-heart fa-lg"></i>
@@ -139,7 +139,7 @@
         </div>
 
         <button class="btn_restaurants_page">Commander</button>
-      </section>
+      </main>
     </div>
 
     <footer>
