"Changement pour parfaire le projet"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <i class="fas fa-map-marker-alt"></i>
       <p>Paris, Belleville</p>
     </div>
+
     <div class="responsive">
       <div class="description_ohmyfood">
         <h1>Réserver le menu qui vous convient</h1>
@@ -141,7 +142,7 @@
 
       <div class="footer_partie2">
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <a href="mailto:vanlerberghe24@gmail.com">Contact</a>
       </div>
     </footer>
   </body>
