--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -166,7 +166,7 @@
         <p>Devenir partenaire</p>
       </div>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:vanlerberghe24@gmail.com">Contact</a>
     </footer>
   </body>
 </html>
