--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -154,7 +154,7 @@
         <p>Devenir partenaire</p>
       </div>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:vanlerberghe24@gmail.com">Contact</a>
     </footer>
   </body>
 </html>
