--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -153,7 +153,7 @@
         <p>Devenir partenaire</p>
       </div>
       <p>Mentions légales</p>
-      <p>Contact</p>
+      <a href="mailto:vanlerberghe24@gmail.com">Contact</a>
     </footer>
   </body>
 </html>
